- Add new logos - Fix spacing around the quantcast logo

--- a/website/src/css/components/product/_CustomerLogosSection.scss
+++ b/website/src/css/components/product/_CustomerLogosSection.scss
@@ -17,11 +17,6 @@
             filter: grayscale(100%) contrast(130%);
             opacity: 0.5;
         }
-
-        &.quantcast,
-        &.convoy {
-            padding-top: 16px;
-        }
     }
 }
 
